chequeo swagger
